@@ -55,12 +55,7 @@ data:extend({
     results = {
       {type = "item", name = "angels-ore1", amount = 2, probability = 0.55},
       {type = "item", name = "angels-ore3", amount = 1, probability = 0.7},
-    },
-    icons = {
-      { icon = data.raw.item['angels-ore3'].icon, icon_size = data.raw.item['angels-ore3'].icon_size, scale = 0.5, shift = { 4, 4 } },
-      { icon = data.raw.item['angels-ore1'].icon, icon_size = data.raw.item['angels-ore1'].icon_size, scale = 0.5, shift = { -4, -4 }}
-    },
-    icon_size = 32
+    }
   },
   {
     type = "recipe",
