@@ -11,7 +11,8 @@ Date: ???
     - Reduced cost of Water Treatment tech
     - Hid recipe Wood Pellets > Carbon Dioxide
     - Hid redundant ore sorting recipes
-    - Re-enable Coal silo (Angel's Addons - Storage Options)
+    - Re-enabled Coal silo (Angel's Addons - Storage Options)
+    - Reverted ore crystallization recipe icons
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed multiplayer desync issue
